perl-jazzhands-appauthal (0.90.13) trusty; urgency=medium

  * added ODBC support

 -- Bernard Jech <bernardjech@yahoo.com>  Mon, 17 May 2021 17:10:00 -0500

perl-jazzhands-appauthal (0.90.10) trusty; urgency=medium

  * improved credential caching algorithm
  * "Caching" option in the AppAuthAL file now accepts "n" and "no", case insensitive
  * credentials are cached to a tempfile which is then renamed / moved

 -- Bernard Jech <bernardjech@yahoo.com>  Mon, 10 May 2021 13:17:00 -0500

perl-jazzhands-appauthal (0.90.3) trusty; urgency=medium

  * assorted fixes to the do_cached_login() funciton

 -- Bernard Jech <bernardjech@yahoo.com>  Wed, 17 Mar 2021 18:15:00 -0500

perl-jazzhands-appauthal (0.86.0) trusty; urgency=medium

  * add support for using vault to get credentials

 -- Todd M. Kover <kovert@omniscient.com>  Wed,  2 Oct 2019 17:39:00 -0500

perl-jazzhands-appauthal (0.79.2) trusty; urgency=medium

  * make not being able to read a file not fatal

 -- Todd M. Kover <kovert@omniscient.com>  Tue, 28 Mar 2017 18:23:00 -0400

perl-jazzhands-appauthal (0.66.1) trusty; urgency=medium

  * add debian bits; make that the default for release generation

 -- Todd M. Kover <kovert@omniscient.com>  Tue, 05 Jan 2016 23:02:06 +0000


perl-jazzhands-appauthal (0.56.3) unstable; urgency=low

  * Initial build.

 -- Todd Kover <kovert@omniscient.com>  Thu, 23 Aug 2012 00:00:00 +0000
